# Computer-Graphic

src/: CMakeLists.txt
src/Model/: crowbar.mtl  head.tga  headcrab.mtl  headcrabsheet.tga  headcrabsheet_normal.tga  portalgun.mtl  w_portalgun.tga
src/TextureSrc/: black_floor_metal_001a.tga  black_floor_metal_001a_normal.tga  black_floor_metal_001na.tga  building_template015b.tga  building_template015b_a1.tga  building_template015f.tga  concreteceiling001a.tga  crosshair1.tga  metal_box_lowres_skin001_a.tga  metal_box_lowres_skin001_na.tga  metal_box_lowres_skin001_no_a.tga  shot4.tga  tilefloor009b.tga  tilefloor009b_normal.tga  ui_logo.tga  ui_logo_flip.tga  white_ceiling_tile002a.tga  white_wall_tile003b.tga  white_wall_tile003b_normal.tga  white_wall_tile003b_spec.tga  wooddoor014a.tga  wooddoor014a_normal.tga
src/client/: CMakeLists.txt
src/core/: CMakeLists.txt
src/framebuffer/: CMakeLists.txt  OmniShadowMap.cpp  OmniShadowMap.h  ShadowMapFBO.cpp  ShadowMapFBO.h
src/game/: CMakeLists.txt
src/graphic/: 3DModel.cpp  3DModel.h  Box.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  LightBox.cpp  LightBox.h  Line.cpp  Line.h  OpenGLRenderCommand.cpp  OpenGLRenderCommand.h  OpenGLTexture.cpp  OpenGLTexture.h  Plane.cpp  Plane.h  Pyramid.cpp  Pyramid.h  Quad.cpp  Quad.h  Render2D.cpp  Render2D.h  RenderCommand.cpp  RenderCommand.h  RenderInterface.cpp  RenderInterface.h  Renderer.cpp  Renderer.h  Shape.cpp  Shape.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
src/light/: CMakeLists.txt  DirectionLight.cpp  DirectionLight.h  Light.h  (+4 more)
(+167 files in other folders)
